Fix padding on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,11 +14,6 @@
 // GreyBlue $5F758E
 // NavyBlue #383961
 
-body, html {
-  width: 100%;
-  height: 100%;
-}
-
 body, h1, h2, h3, h4, h5, h6 {
   font-family: 'Raleway', Helvetica, Arial, sans-serif;
   font-weight: 400;
